Fixes button spacing and mobile responsiveness

--- a/styles.css
+++ b/styles.css
@@ -108,13 +108,15 @@ ul {
 .button-flexbox {
   display: flex;
   flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+
+  column-gap: 15px;
 
   width: 100%;
-
-  justify-content: space-evenly;
 }
 
-a {
+.cta-button {
   background-color: rgb(49, 172, 255);
 
   font-family: Arial;
@@ -125,7 +127,9 @@ a {
   text-decoration: none;
   text-align: center;
 
-  width: 200px;
+  flex: 1;
+
+  min-width: 150px;
 
   border: none;
   border-radius: 8px;
@@ -136,11 +140,16 @@ a {
   transition: box-shadow 0.15s, transform 0.15s;
 }
 
-a:hover {
+.cta-button:hover {
   cursor: pointer;
 
   transform: translateY(-3px);
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.25);
+}
+
+a {
+  color: black;
+  text-decoration: none;
 }
 
 footer {
@@ -150,13 +159,24 @@ footer {
   margin-top: 25px;
 }
 
-@media (max-width: 650px) {
+.copyright-info {
+  margin-bottom: 0;
+}
+
+@media (max-width: 570px) {
   .sidebar {
     position: relative;
     width: 100%;
+    overflow-x: hidden;
+
+    padding-top: 0;
+    padding-left: 0;
+    padding-right: 0;
   }
 
-  .content {
-    margin-right: 35px;
+  .wrapper {
+    padding-top: 35px;
+    padding-left: 35px;
+    padding-right: 35px;
   }
 }
